# mirc-robot-controller

./: CMakeLists.txt  README.md  package.xml
include/: controlled_robot.h  myClassTest.h  robotic_arm.h  rover.h  utilities.h
launch/: myClassTest.launch  myMoveGroup.launch  myPlanner.launch  robotic_arm.launch  robotic_arm_leap_demo.launch  robotic_arm_simulation.launch  rover.launch
msg/: HandStampedPose.msg
src/: controlled_robot.cpp  myClassTest.cpp  myDummyPub.cpp  myMoveGroup.cpp  myPlanner.cpp  robotic_arm.cpp  rover.cpp  utilities.cpp
